had a major problem of menu not showing up, fixed it

--- a/style.css
+++ b/style.css
@@ -11,6 +11,16 @@ html {
   font-size: 62.5%;
 }
 /* -----menu----- */
+
+
+.container {
+  display: none;
+}
+
+.display .container {
+  display: block;
+}
+
 .hamburger-menu {
   width: 3rem;
   height: 3rem;
@@ -87,7 +97,6 @@ html {
   left: -2rem;
   transform: translateY(-50%);
 }
-
 .header {
   width: 100%;
   height: 100vh;
@@ -221,32 +230,6 @@ html {
   width: 100.5%;
 }
 
-.social-media {
-  position: absolute;
-  bottom: 3rem;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-}
-
-.social-media i {
-  font-size: 2.2rem;
-  margin: 3rem;
-  width: 4.5rem;
-  height: 4.5rem;
-  background-color: #777;
-  color: #fff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 50%;
-  transition: background-color 0.3s;
-}
-
-.social-media i:hover {
-  background-color: #c29525;
-}
-
 .home-content {
   text-align: center;
   display: block;
@@ -284,7 +267,7 @@ html {
 .hear {
   height: 4em;
   width: 18%;
-  padding: 1.5em;
+  padding: auto;
   margin: 1em auto;
   margin-top: 5rem;
   margin-bottom: 5rem;
