--- a/style_abt.css
+++ b/style_abt.css
@@ -123,6 +123,7 @@
     opacity: 0.8;
   }
   .section-about {
+    background-color: #f5f5f5;
     padding-top: 96px;
     padding-bottom: 100px;
     font-family: "Source Sans Pro", sans-serif;
